frontend fixes and updates

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             well-being.
           </p>
 
-          <a href="login.html" class="btn-solid big">Start Chat</a>
+          <a href="../pages/login.html" class="btn-solid big">Start Chat</a>
         </div>
 
         <div class="hero-image">
@@ -152,7 +152,7 @@
             <li>Use quick tools like 1-minute breathing, mood logs, and sleep tracking</li>
           </ul>
 
-          <a href="features.html" class="support-btn">Learn more</a>
+          <a href="../pages/features.html" class="support-btn">Learn more</a>
         </div>
 
       </div>
